<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="applicationName"
			translatable="false">TimelapsePlus</string>

	<string name="mainFramesCountFinished">Saved.</string>
	<string name="mainFramesCount">%1$d frame/%2$ds; %3$dMB, left %4$dMB</string>
	<string name="mainMediaInfo">%1$dx%2$d@%3$dfps; %4$dms</string>
	<string name="mainFramesCountReady">Ready</string>
	<string name="mainBatteryLevel">Battery: %d%%</string>

	<string name="exitDialogTitle">Confirm</string>
	<string name="exitDialogQuestion">Are you sure to quit?</string>
	<string name="exitDialogOK">OK</string>
	<string name="exitDialogCancel">Cancel</string>

	<string name="settingsSave">Save</string>

	<string name="settingTabImage">Image</string>
	<string name="settingTabVideo">Timelapse</string>
	<string name="settingTabAbout">About</string>

	<string name="settingImageSize">Video resolution</string>
	<string name="settingImageQuality">Quality</string>
	<string name="settingImageWhiteBalance">White balance</string>
	<string name="settingImageFilter">Filter</string>

	<string name="settingVideoDelay">Delay after start (ms)</string>
	<string name="settingVideoCaptureInterval">Capture Interval (ms)</string>
	<string name="settingVideoFps">Video FPS</string>
	<string name="settingVideoFpsDefaultValue"
			translatable="false">25</string>
	<string name="settingVideoCaptureIntervalDefaultValue"
			translatable="false">5000</string>
	<string name="settingVideoDelayDefaultValue"
			translatable="false">3000</string>
	<string name="settingVideoPath">Path</string>
	<string name="settingImageFlash">Flash mode</string>
	<string name="settingVideoMode">Record mode</string>
	<string-array name="settingVideoRecordMode">
		<item>video (.avi file, MJPEG codec)</item>
		<item>photos (.jpg files in directory)</item>
	</string-array>
	<string name="settingImageHandler">Handler</string>
	<string-array name="settingImageHandler">
		<item>none</item>
		<item>insert date and time</item>
	</string-array>

	<string name="aboutVersion"
			translatable="false">ver. %s</string>
	<string name="aboutDevelopers">ExplorerDC © 2011\nVladislav Veluga © 2018</string>

	<string name="errorPermission">Not all permissions are accepted</string>
	<string name="holderGrantAccess">Please, make permissions</string>
	<string name="warnPlayingTitle">Warning!</string>
	<string name="warnPlayingOK">Understand</string>
	<string name="warnPlayingContent">Not all players in Android can play video in MJPEG codec, which write videos by this application. Try VLC or open video on PC.</string>
	<string name="settingVideoRemoteControl">Enable remote control</string>
	<string name="settingImageStoreDateTime">Record date and time</string>
	<string name="start">Start</string>
	<string name="menu_save">Save preset</string>
	<string name="settingImageStoreAlign">Save and correct align</string>
	<string name="settingImageStoreLocation">Store location</string>
	<string name="settingHeaderExtra">Extra</string>
	<string name="settingHeaderVideo">Video</string>
	<string name="settingHeaderCamera">Camera</string>
	<string name="settingHeaderTimelapse">Timelapse</string>
	<string name="optionInvalidDefault">Something entered incorrect…</string>
	<string name="optionInvalidFps">Invalid FPS value: available values between 15 and 60</string>
	<string name="optionInvalidQuality">Invalid quality value: available values between 1 and 100</string>
	<string name="optionInvalidDelay">Invalid delay: must me greater or equals zero</string>
	<string name="optionInvalidInterval">Invalid interval value: available values between 50 and 180000 ms</string>
	<string name="settingProcessingHandlerDateTimeTextSize">Text size (% of height)</string>
	<string name="settingProcessingHandlerDateTimeAlign">Text align</string>
	<string-array name="settingProcessingHandlerDateTimeAlignValues">
		<item>Bottom left</item>
		<item>Bottom right</item>
		<item>Top left</item>
		<item>Top right</item>
	</string-array>
	<string name="settingProcessingHandlerDateTimeColorText">Text color</string>
	<string name="settingProcessingHandlerDateTimeColorBack">Background color</string>
	<string name="optionInvalidProcessingHandlerDateTimeTextSize">Invalid text size: size is percent of height of image. Available values between 1 and 75</string>
	<string name="processing_handlers">Applying handlers</string>
	<string name="processing_video">Applying video format</string>


</resources>
