<?xml version="1.0" encoding="utf-8"?>
<ScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent">
	<android.support.constraint.ConstraintLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="match_parent">

		<ImageView
				android:layout_width="48dp"
				android:layout_height="48dp" app:srcCompat="@mipmap/ic_launcher"
				android:id="@+id/imageView" android:layout_marginLeft="8dp"
				app:layout_constraintLeft_toLeftOf="parent" android:layout_marginRight="8dp"
				app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent"
				android:layout_marginTop="24dp" android:contentDescription="@null" android:layout_marginStart="8dp"
				android:layout_marginEnd="8dp"/>
		<TextView
				android:text="@string/applicationName"
				android:id="@+id/aboutName"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				app:layout_constraintTop_toBottomOf="@+id/imageView"
				android:textAppearance="@style/TextAppearance.AppCompat.Title"
				android:layout_marginLeft="8dp" app:layout_constraintLeft_toLeftOf="parent" android:layout_marginRight="8dp"
				app:layout_constraintRight_toRightOf="parent" android:layout_marginStart="8dp"
				android:layout_marginEnd="8dp"/>

		<TextView
				android:text="@string/aboutVersion"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:id="@+id/aboutVersion"
				app:layout_constraintTop_toBottomOf="@+id/aboutName"
				android:textAppearance="@style/TextAppearance.AppCompat.Medium"
				android:layout_marginLeft="8dp" app:layout_constraintLeft_toLeftOf="parent" android:layout_marginRight="8dp"
				app:layout_constraintRight_toRightOf="parent" android:layout_marginStart="8dp"
				android:layout_marginEnd="8dp"/>

		<TextView
				android:text="@string/aboutDevelopers"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:id="@+id/aboutDevelopers"
				android:textAlignment="center"
				app:layout_constraintTop_toBottomOf="@+id/aboutVersion"
				android:textAppearance="@style/TextAppearance.AppCompat.Body1"
				android:layout_marginLeft="8dp" app:layout_constraintLeft_toLeftOf="parent" android:layout_marginRight="8dp"
				app:layout_constraintRight_toRightOf="parent" android:layout_marginStart="8dp"
				android:layout_marginEnd="8dp"/>
	</android.support.constraint.ConstraintLayout>
</ScrollView>